# indico-toolkit-python

./: CHANGELOG.md  README.md  mypy.ini  pyproject.toml
.github/workflows/: python.yaml
examples/: auto_review_predictions.py  copy_teach_task.py  create_auto_classification_workflow.py  create_full_structure.py  dataset_tasks.py  ground_truth_metrics.py  manipulate_pdfs.py  merge_snapshots.py  model_metrics.py  pdf_highlighter.py  poll_auto_review.py  results_autoreview.py  results_dataclasses.py  results_to_csv.py  row_association.py  submitting_to_doc_extraction.py  submitting_to_workflow.py
indico_toolkit/: __init__.py  client.py  retry.py
indico_toolkit/association/: extracted_tokens.py  line_items.py  positioning.py
indico_toolkit/auto_populate/: populator.py  types.py
indico_toolkit/auto_review/: auto_reviewer.py
indico_toolkit/etloutput/: __init__.py  box.py  cell.py  etloutput.py  range.py  span.py  table.py  token.py  utils.py
indico_toolkit/indico_wrapper/: __init__.py  dataset.py  doc_extraction.py  download.py  indico_wrapper.py  modelop.py  reviewer.py  workflow.py
indico_toolkit/metrics/: __init__.py  compare_ground_truth.py  compare_models.py  metrics.py  plotting.py
indico_toolkit/ocr/: __init__.py  customocr_object.py  ondoc_object.py  standard_object.py
indico_toolkit/pipelines/: file_processing.py
indico_toolkit/polling/: autoreview.py  queries.py
indico_toolkit/results/: __init__.py  document.py  model.py  normalization.py  predictionlist.py  result.py  utils.py
indico_toolkit/snapshots/: snapshot.py
indico_toolkit/structure/: create_structure.py  queries.py  utils.py
indico_toolkit/types/: __init__.py  classification.py  extractions.py  predictions.py  workflow_object.py
tests/: conftest.py  test_retry.py
tests/association/: conftest.py  test_extracted_tokens.py  test_line_items.py  test_positioning.py  test_splitting.py
tests/etloutput/: test_files.py  test_rowspan_colspan.py  test_token_table_cell.py  (+1 more)
(+68 files in other folders)
